@@ -1,8 +1,10 @@
 2.7.2
 =====
-Jul 8, 2017
+Jul 10, 2017
 - Add syntax checking for DataTable tags
 - Report error if Data Table tag is specified without StepDef tag
+- Give steps that call other steps execution priority over all other steps or StepDefs that may have the same
+  structure to ensure that they are evaluated and not raised as conflicts that require renaming.
 
 2.7.1
 =====
